source/blender/io/wavefront_obj/importer/obj_import_mesh.cc
@@ -30,13 +30,17 @@ Object *MeshFromGeometry::create_mesh(Main *bmain,
                                       Map<std::string, Material *> &created_materials,
                                       const OBJImportParams &import_params)
 {
+  const int64_t tot_verts_object{mesh_geometry_.get_vertex_count()};
+  if (tot_verts_object <= 0) {
+    /* Empty mesh */
+    return nullptr;
+  }
   std::string ob_name{mesh_geometry_.geometry_name_};
   if (ob_name.empty()) {
     ob_name = "Untitled";
   }
   fixup_invalid_faces();
 
-  const int64_t tot_verts_object{mesh_geometry_.vertex_count_};
   /* Total explicitly imported edges, not the ones belonging the polygons to be created. */
   const int64_t tot_edges{mesh_geometry_.edges_.size()};
   const int64_t tot_face_elems{mesh_geometry_.face_elements_.size()};
@@ -151,9 +155,9 @@ void MeshFromGeometry::fixup_invalid_faces()
 
 void MeshFromGeometry::create_vertices(Mesh *mesh)
 {
-  const int tot_verts_object{mesh_geometry_.vertex_count_};
+  const int tot_verts_object{mesh_geometry_.get_vertex_count()};
   for (int i = 0; i < tot_verts_object; ++i) {
-    int vi = mesh_geometry_.vertex_start_ + i;
+    int vi = mesh_geometry_.vertex_index_min_ + i;
     if (vi < global_vertices_.vertices.size()) {
       copy_v3_v3(mesh->mvert[i].co, global_vertices_.vertices[vi]);
     }
@@ -168,7 +172,7 @@ void MeshFromGeometry::create_vertices(Mesh *mesh)
 void MeshFromGeometry::create_polys_loops(Mesh *mesh, bool use_vertex_groups)
 {
   mesh->dvert = nullptr;
-  const int64_t total_verts = mesh_geometry_.vertex_count_;
+  const int64_t total_verts = mesh_geometry_.get_vertex_count();
   if (use_vertex_groups && total_verts && mesh_geometry_.has_vertex_groups_) {
     mesh->dvert = static_cast<MDeformVert *>(
         CustomData_add_layer(&mesh->vdata, CD_MDEFORMVERT, CD_CALLOC, nullptr, total_verts));
@@ -202,7 +206,7 @@ void MeshFromGeometry::create_polys_loops(Mesh *mesh, bool use_vertex_groups)
       const PolyCorner &curr_corner = mesh_geometry_.face_corners_[curr_face.start_index_ + idx];
       MLoop &mloop = mesh->mloop[tot_loop_idx];
       tot_loop_idx++;
-      mloop.v = curr_corner.vert_index;
+      mloop.v = curr_corner.vert_index - mesh_geometry_.vertex_index_min_;
 
       /* Setup vertex group data, if needed. */
       if (!mesh->dvert) {
@@ -229,14 +233,14 @@ void MeshFromGeometry::create_vertex_groups(Object *obj)
 void MeshFromGeometry::create_edges(Mesh *mesh)
 {
   const int64_t tot_edges{mesh_geometry_.edges_.size()};
-  const int64_t total_verts{mesh_geometry_.vertex_count_};
+  const int64_t total_verts{mesh_geometry_.get_vertex_count()};
   UNUSED_VARS_NDEBUG(total_verts);
   for (int i = 0; i < tot_edges; ++i) {
     const MEdge &src_edge = mesh_geometry_.edges_[i];
     MEdge &dst_edge = mesh->medge[i];
-    BLI_assert(src_edge.v1 < total_verts && src_edge.v2 < total_verts);
-    dst_edge.v1 = src_edge.v1;
-    dst_edge.v2 = src_edge.v2;
+    dst_edge.v1 = src_edge.v1 - mesh_geometry_.vertex_index_min_;
+    dst_edge.v2 = src_edge.v2 - mesh_geometry_.vertex_index_min_;
+    BLI_assert(dst_edge.v1 < total_verts && dst_edge.v2 < total_verts);
     dst_edge.flag = ME_LOOSEEDGE;
   }
 
@@ -311,10 +315,8 @@ void MeshFromGeometry::create_materials(Main *bmain,
 
 void MeshFromGeometry::create_normals(Mesh *mesh)
 {
-  /* NOTE: Needs more clarity about what is expected in the viewport if the function works. */
-
   /* No normal data: nothing to do. */
-  if (global_vertices_.vertex_normals.is_empty() || !mesh_geometry_.has_vertex_normals_) {
+  if (global_vertices_.vertex_normals.is_empty()) {
     return;
   }
 
